--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-h1,h2,h3{
+h1,h2,h3,p{
   text-align: center;
 }
 form{
@@ -7,4 +7,8 @@ form{
   margin: auto;
   text-align: center;
   margin-top: 40px;
+}
+
+body{
+  background-image: url("pizza.jpg");
 }
